[gd_scene load_steps=70 format=2]

[ext_resource path="res://Assets/Adventurer.png" type="Texture" id=1]
[ext_resource path="res://StateMachine/Jumping.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/Moving.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://StateMachine/Coyote.gd" type="Script" id=5]
[ext_resource path="res://StateMachine/Idle.gd" type="Script" id=6]
[ext_resource path="res://StateMachine/Falling.gd" type="Script" id=7]
[ext_resource path="res://StateMachine/Moving_and_Jumping.gd" type="Script" id=8]
[ext_resource path="res://Player/Player.gd" type="Script" id=9]
[ext_resource path="res://StateMachine/Attack1.gd" type="Script" id=10]
[ext_resource path="res://StateMachine/Moving_and_Attacking.gd" type="Script" id=11]
[ext_resource path="res://overlap/Hurtbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://overlap/Hitbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://UI/Healthbar.tscn" type="PackedScene" id=14]

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 222, 51, 37 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 222, 51, 37 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 222, 51, 37 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 222, 51, 37 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 222, 51, 37 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 255, 222, 51, 37 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 306, 222, 51, 37 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 259, 51, 37 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 259, 51, 37 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 259, 51, 37 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 259, 51, 37 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 259, 51, 37 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 255, 259, 51, 37 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 306, 259, 51, 37 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 296, 51, 37 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 296, 51, 37 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 296, 51, 37 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 555, 51, 37 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 333, 51, 37 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 333, 51, 37 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 333, 51, 37 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 74, 51, 37 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 74, 51, 37 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 74, 51, 37 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 255, 74, 51, 37 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 306, 74, 51, 37 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 111, 51, 37 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 111, 51, 37 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 111, 51, 37 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 185, 51, 37 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 255, 185, 51, 37 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 74, 51, 37 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 74, 51, 37 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 306, 481, 51, 37 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 518, 51, 37 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 518, 51, 37 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 518, 51, 37 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 518, 51, 37 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 518, 51, 37 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 255, 518, 51, 37 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 306, 518, 51, 37 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 555, 51, 37 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 555, 51, 37 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 555, 51, 37 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 555, 51, 37 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 51, 37, 51, 37 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 37, 51, 37 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 153, 37, 51, 37 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 37, 51, 37 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 255, 37, 51, 37 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 306, 37, 51, 37 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "Attack1",
"speed": 10.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "Attack2",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": false,
"name": "Attack3",
"speed": 5.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": true,
"name": "Die",
"speed": 4.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": false,
"name": "Falling",
"speed": 10.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": false,
"name": "Move_Attack1",
"speed": 8.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": false,
"name": "Move_Attack2",
"speed": 5.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": false,
"name": "Move_Attack3",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 13, 12.5 )

[sub_resource type="CircleShape2D" id=88]
radius = 15.0

[sub_resource type="CircleShape2D" id=89]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 200, 200 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 9 )
hp_max = 50
hp = 50
defense = 5
knockback_modifier = 2.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 5.5 )
shape = SubResource( 16 )

[node name="Floor" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="Floor"]
position = Vector2( -17, 17 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 30

[node name="Center" type="RayCast2D" parent="Floor"]
position = Vector2( -6, 17 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 30

[node name="Right" type="RayCast2D" parent="Floor"]
position = Vector2( 3, 17 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2147483678

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Attack" type="Node2D" parent="."]

[node name="Attack1" type="RayCast2D" parent="Attack"]
rotation = -0.345575
scale = Vector2( 1, 6 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 5
collide_with_areas = true

[node name="Attack2" type="RayCast2D" parent="Attack"]
rotation = 0.230383
scale = Vector2( 1, 6 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 4

[node name="Attack3" type="RayCast2D" parent="Attack"]
position = Vector2( 0, 5 )
rotation = 0.230383
scale = Vector2( 1, 3 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 4

[node name="Moving_Attack1" type="RayCast2D" parent="Attack"]
scale = Vector2( 1, 3 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 4

[node name="Moving_Attack2" type="RayCast2D" parent="Attack"]
position = Vector2( -3, 5 )
rotation = -0.342085
scale = Vector2( 1, 7 )
enabled = true
cast_to = Vector2( 22.3359, 0.150208 )
collision_mask = 4

[node name="Moving_Attack3" type="RayCast2D" parent="Attack"]
position = Vector2( -3, 5 )
rotation = -0.0331613
scale = Vector2( 15, 3 )
enabled = true
cast_to = Vector2( 0.304416, 4.38621 )
collision_mask = 4

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Moving_and_Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Attack1" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="AttackReset" type="Timer" parent="StateMachine/Attack1"]
wait_time = 2.0

[node name="Moving_and_Attacking" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="AttackReset1" type="Timer" parent="StateMachine/Moving_and_Attacking"]
wait_time = 2.0

[node name="Coyote" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="StateMachine/Coyote"]
wait_time = 0.2
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 12 )]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -3, 5 )
shape = SubResource( 88 )

[node name="Hitbox" parent="." instance=ExtResource( 13 )]
scale = Vector2( 2, 2 )
collision_layer = 13
collision_mask = 13
monitoring = false
monitorable = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 89 )

[node name="Healthbar" parent="." instance=ExtResource( 14 )]
margin_left = -21.0
margin_top = -28.0
margin_right = 19.0
margin_bottom = 12.0
rect_scale = Vector2( 1, 0.8 )

[connection signal="died" from="." to="." method="_on_Player1_died"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StateMachine/Attack1/AttackReset" to="StateMachine/Attack1" method="_on_AttackReset_timeout"]
[connection signal="timeout" from="StateMachine/Moving_and_Attacking/AttackReset1" to="StateMachine/Moving_and_Attacking" method="_on_AttackReset1_timeout"]
[connection signal="timeout" from="StateMachine/Coyote/Timer" to="StateMachine/Coyote" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
